--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -101,6 +101,7 @@ p {
   border: 1px solid white;
   cursor: pointer;
   position: relative;
+  
 }
 
 .tm-nav-text {
@@ -108,6 +109,7 @@ p {
   left: 0;
   right: 0;
   bottom: 10px;
+  color:white;
 }
 
 .fa-3x {
@@ -127,6 +129,7 @@ p {
 .tm-nav-icon {
   display: block;
   margin-bottom: 25px;
+  color:white;
 }
 
 /* Expanding Grid Items from Codrops */
