--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,11 +364,24 @@ html, body {
 }
 
 .portfolio-item {
-    height: 280px;
+    height: 480px;
     margin-bottom: 30px;
     position: relative;
 }
-
+.portfolio-item1 {
+    height: 530px;
+    width:848px;
+    margin-bottom: 30px;
+    position: relative;
+}
+.portfolio-item3 {
+    height: 339px;
+    width:485px;
+    margin-bottom: 10px;
+    margin-top: 600px;
+    margin-right: 700px;
+    position: relative;
+}
 .section-portfolio .col-md-4:nth-last-child(-n+3) .portfolio-item {
     margin-bottom: 0;
 }
